--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.16",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/preact": "^3.2.0",
+    "@astrojs/rss": "^4.0.5",
+    "astro": "^4.5.16",
+    "preact": "^10.20.2",
     "typescript": "^5.4.4"
   }
 }
